--- a/src/pages/choicejimyung/choicejimyung.scss
+++ b/src/pages/choicejimyung/choicejimyung.scss
@@ -1,4 +1,14 @@
-page-infomodal {
+page-choicejimyung {
+    .sc{
+
+        margin: 10px;
+    width: 30%;
+    border: solid 1px;
+    }
+    .center{
+
+    display: flex;
+    }
     .image{
         width: 35%;
         height: 100%;
@@ -20,31 +30,13 @@ page-infomodal {
       margin:auto !important;
       margin-top:12px !important;
         
-    height: 45px;
 width: 80%;
-    }
-    .left{
-
-      float: left;
-      width: 50%;
-      height: 40px;
-      position: absolute;
-      left: 5%;
-  }
-    .right{
-
-    float: right;
-    width: 50%;
-    height: 40px;
-    position: absolute;
-    right: 0%;
-    }
-    .upper{
-      height:40px;
+min-height: 35px !important;
     }
    .img{
     width: 100%;
     text-align: center;
+    
    }
     .content{
         height: 85%;
@@ -94,15 +86,15 @@ width: 80%;
       }
 
       .btn{
+        background:transparent !important;
         color: black;
-      background: white !important;
-      border: solid 1px;
+        border: solid 1px;
         width:100% !important;
       margin:auto !important;
       margin-top:12px !important;
         
-      width: 80%;
-      min-height: 35px !important;
+width: 80%;
+min-height: 35px !important;
     }
       
       button.nav{
@@ -110,16 +102,16 @@ width: 80%;
         color:#000;
         float:left;
       }
+      
         .modal_content {
           text-align: center;
           background: white;
           position: absolute;
           top: calc(20% - (40%/2));
           left: 0;
+          overflow: scroll;
           right: 0;
-          background: #fdd734;
           width: 80%;
-          height: 100%;
           padding: 10px;
           z-index: 100;
           margin: 0 auto;
