--- a/src/pages/orderdetail/orderdetail.scss
+++ b/src/pages/orderdetail/orderdetail.scss
@@ -4,17 +4,120 @@ page-orderdetail {
         height: 80px;
         border-radius: 10px;
         background: aliceblue;
-        background-color: antiquewhite;
+        background-color: black;
+        padding: 20px;
+  box-shadow: 1px 1px 10px #999;
+  margin: 2px;
+  display: inline-block;
+  vertical-align: top;
     }
+    .container {
+      overflow-x: auto;
+      white-space: nowrap;
+  }
+
+  .column {
+      display: inline-block;
+      vertical-align: top;
+      width: 100%;
+  }
+  .minus{
+
+    margin-left: 20px;
+    width: 25px;
+    height: 25px;
+    font-size: 20px;
+  }
+  .toolbar-background{
+    background: #fdd734 !important;
+  }
+  .toolbar{
+  }
+  
+  .button {
+   
+        display: inline-block;
+        padding: 10px;
+        margin: 5px;
+        background-color: #ccc;
+        border-radius: 5px;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+        height: 80px;
+        width: 125px;
+        color: black;
+  }
+
+    .wrapper {
+        background: #EFEFEF;
+        box-shadow: 1px 1px 10px #999;
+        margin: auto;
+        text-align: center;
+        position: relative;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        margin-bottom: 20px !important;
+        width: 100%;
+        padding-top: 5px;
+      }
+      .scrolls {
+        overflow-x: scroll;
+        overflow-y: hidden;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: 160px;
+        white-space: nowrap
+      }
+      .scrolls div {
+        padding: 20px;
+        box-shadow: 1px 1px 10px #999;
+        margin: 2px;
+        display: inline-block;
+        vertical-align: top;
+      }
     .tt{
-        float:left;
-        margin-left: 10px;
+       
+  overflow-x: scroll;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 160px;
+  white-space: nowrap
+        
     }
     .horizon{
-        height: 120px;
+        background: #EFEFEF;
+        box-shadow: 1px 1px 10px #999;
+        margin: auto;
+        text-align: center;
+        position: relative;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        margin-bottom: 20px !important;
+        width: 100%;
+        padding-top: 5px;
     }
     .active{
         
     background-color: red;
+    }
+    .item-md{
+      font-weight: 900;
+      font-size:15px;
+      background: #a3bcd3;
+    }
+    .item item-block item-md{
+      background: #a3bcd3;
+  }
+    .bott{
+      button{
+        background: #fdd734;
+      }
+      background: #a3bcd3;
     }
 }
