--- a/src/pages/choicemodal/choicemodal.scss
+++ b/src/pages/choicemodal/choicemodal.scss
@@ -5,6 +5,17 @@ page-choicemodal {
     width: 30%;
     border: solid 1px;
     }
+    .sc2{
+      --background: none;
+      background-image: url('./../../assets/img/angelicon.jpg');
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin: 10px;
+  width: 30%;
+  border: solid 1px;
+  }
+  
     .center{
 
     display: flex;
@@ -111,7 +122,7 @@ min-height: 35px !important;
           left: 0;
           overflow: scroll;
           right: 0;
-          width: 80%;
+          width: 90%;
           height: 100%;
           padding: 10px;
           z-index: 100;
