--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -2,7 +2,6 @@ page-info {
 
     .header {
         position: absolute;
-        height: 80px;
         width: 100%;
         color:white;
     }
@@ -195,8 +194,8 @@ page-info {
         padding-bottom: 0px;
         padding-top: 0px;
     }
-    .toolbar-background{
-        background: rgb(59, 56, 56);
+      .toolbar-background{
+        background: #fdd734;
     }
     .toolbar{
         text-align: center;
@@ -283,21 +282,26 @@ page-info {
 
     .contents
     {
-      background: black;
-      margin-top:45px;
+      background: white;
       .room-current
       {
-        margin-top: 10%;
+        margin-top: 5%;
         padding: 3%;
+
+    border: solid 1px;
+    margin-left: 10px;
+    margin-right: 10px;
         .title-div
         {
+
+    height: 50px;
           .square
           {
             color: rgb(254, 184, 45);
           }
           .text
           {
-            color: white;
+            color: black;
             font-size: 20px;
           }
         }
@@ -321,30 +325,36 @@ page-info {
           }
           .name-keys
           {
+
+            text-align: center;
+            font-size: 14px;
+    height: 30px;
+    line-height: 30px;
             background-color: rgb(255,240,200);
             border-bottom: solid 1px black;
           }
           .datas
           {
-            background-color: rgb(240, 240, 240);
-            border-bottom: solid 1px rgb(176, 176, 176);
+    height: 30px;
+    border-bottom: solid 1px #b0b0b0;
+    line-height: 30px;
           }
         }
       }
-
       .vacancy-current
-      {
-        margin-top: 10%;
-        padding: 3%;
+      {    overflow-y: scroll;
+    width: 100%;
         .title-div
         {
+
+    padding: 5px;
           .square
           {
             color: rgb(254, 184, 45);
           }
           .text
           {
-            color: white;
+            color: black;
             font-size: 20px;
           }
         }
@@ -354,6 +364,10 @@ page-info {
         .chart-div
         {
           border: solid 1px white;
+          background: wheat;
+          overflow-y: scroll;
+          height: 80%;
+    background-color: white !important;
           .flex-div:nth-child(n+2)
           {
             border-top: solid 1px white;
@@ -363,8 +377,10 @@ page-info {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
-            background-color: white;
-            border:solid 1px;
+            background: #fdd734;
+            height: 40px;
+            width: 100%;
+            line-height: 40px;
             span:nth-child(n+2)
             {
               border-left: solid 1px white;
@@ -383,12 +399,16 @@ page-info {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-evenly;
-            background-color: rgb(255,240,200);
+
+    background-color: white !important;
             span{
               height: 50px;
               line-height: 50px;
               text-align: center;
               display: inline-block;
+
+    border: none !important;
+    background-color: white !important;
               width: calc(100% / 6);
             }
             span:nth-child(n+2)
