--- a/src/pages/attendance/attendance.scss
+++ b/src/pages/attendance/attendance.scss
@@ -21,6 +21,20 @@ page-attendance {
         color : black;
       }
     }
+    .select-md{
+      padding:0px !important;
+      padding-right: 5px !important;
+    }
+    ion-select{
+      max-width: 100% !important;
+      width:100%;
+    }
+    .list list-md{
+      width:80px !important;
+    }
+    .item-md{
+      padding-left: 0px !important;
+    }
     .segactive{
       height: 100%;
 
@@ -420,6 +434,9 @@ page-attendance {
           {
             background-color: rgb(240, 240, 240);
             border-bottom: solid 1px rgb(176, 176, 176);
+
+    height: 25px;
+    line-height: 25px;
           }
         }
       }
