--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -9,6 +9,9 @@ page-account {
     margin:0px !important;
     height: 30px !important;
   }
+  .b{
+    overflow-y: scroll;
+  }
   .newbtn{
     height: 80px;
     width: 120px;
