--- a/src/pages/agasi/agasi.scss
+++ b/src/pages/agasi/agasi.scss
@@ -34,8 +34,8 @@ page-agasi {
     }
     .c_fill{
       position: absolute;
-      left: 41%;
-      top: 25%;
+      top: 180px;
+      left: 140px;
       border: solid 1px;
       border-radius: 80px;
       height: 80px;
@@ -92,10 +92,9 @@ page-agasi {
       width: 100%;
     left: 10%;
     font-size: 18px;
+    margin-top: 63px !important;
     font-weight: 600;
     top:40%;
-    p{
-    }
     }
     .circle_progress_wrap {
       position: relative;
