--- a/src/pages/choicemodal2/choicemodal2.scss
+++ b/src/pages/choicemodal2/choicemodal2.scss
@@ -109,6 +109,7 @@ min-height: 35px !important;
           background: white;
           position: absolute;
           top: calc(20% - (40%/2));
+          overflow: scroll;
           left: 0;
           overflow: scroll;
           right: 0;
