--- a/src/pages/editingroom/editingroom.scss
+++ b/src/pages/editingroom/editingroom.scss
@@ -74,6 +74,44 @@ min-height: 35px !important;
           padding:0;
           width: 25%;
       }
+
+      .chart-div
+        {
+          color: black;
+          text-align: center;
+          .name-keys, .datas{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            span{
+              display: inline-block;
+              width: calc(100% / 5);
+            }
+            span:nth-child(n+1)
+            {
+              border-left: solid 1px white;
+            }
+          }
+          .name-keys
+          {
+            background-color: #fff0c8;
+            height: 25px;
+            border-bottom: solid 1px black;
+            line-height: 25px;
+            span{
+              font-size:15px;
+            }
+          }
+          .datas
+          {
+            background-color: rgb(240, 240, 240);
+            border-bottom: solid 1px rgb(176, 176, 176);
+          }
+          span{
+            font-size:8px;
+          }
+        }
+
       .btn{
         border: none;
         background: aliceblue;
@@ -87,21 +125,18 @@ min-height: 25px;
       .newspan{
         line-height: 25px;
               margin: auto;
-              width: 50px;
-              margin-left: 15px;
+    width: 45px !important;
+    display: inline-grid;
       }
       input{
-        width:60px !important;
+        width:60px;
       }
       .datas{
         background-color: #f0f0f0;
         border-bottom: solid 1px #b0b0b0;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
         span{
-          display: inline-block;
-          width: calc(100% / 8);
+          height: 50px;
+          line-height: 40px;
         }
         span:nth-child(n+1)
         {
