--- a/src/pages/loginpage/loginpage.scss
+++ b/src/pages/loginpage/loginpage.scss
@@ -40,6 +40,18 @@
 // }
 
 page-loginpage {
+    .footer{
+      position: fixed;
+      width: 100%;
+      height: 100px;
+      background: gray;
+      bottom: 0;
+      margin: auto;
+      padding: 5px;
+      p{
+        margin:0px !important;
+      }
+    }
 .box {
         height: 100%;
     }
@@ -141,11 +153,11 @@ page-loginpage {
     .logo{
       margin: 0;
       padding: 0;
-  
       margin: 20% 25% 10%;
-  
       height: auto;
+      margin-bottom: 0px;
       width: 50%;
+      margin-top: 0px;
     }
   
     .input-title{
