--- a/src/pages/choicemodal/choicemodal.scss
+++ b/src/pages/choicemodal/choicemodal.scss
@@ -1,4 +1,12 @@
 page-choicemodal {
+  .ion-page.show-page{
+
+    background-color: rgba(0,0,0,0.75) !important;
+  }
+  .ion-page{
+
+  background-color: rgba(0,0,0,0.75) !important;
+  }
     .sc{
 
         margin: 10px;
