--- a/src/pages/choice/choice.scss
+++ b/src/pages/choice/choice.scss
@@ -35,7 +35,7 @@ page-choice {
     }
     .bottomlist{
       width: 100%;
-      height: 10%;
+      height: 13%;
       overflow-y: scroll;
     }
     .chat-container {
@@ -299,10 +299,10 @@ page-choice {
     margin-top: 64px;
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 90%;
         
         background-color: white;
-        overflow-y: hidden;
+        overflow-y: scroll;
     }
 
     .ion-item-area-1 {
