--- a/src/pages/choicedetail/choicedetail.scss
+++ b/src/pages/choicedetail/choicedetail.scss
@@ -17,9 +17,16 @@ page-choicedetail {
 
   }
   .messagessss{
+    
     overflow-y: scroll;
     width: 100%;
-    height: 250px;
+    height: 23%;
+    position: absolute;
+    top: 70%;
+  }
+  .btnbottom{
+    width:50px !important;
+    font-size:12px 
   }
   .c{
     float: right;
@@ -66,6 +73,8 @@ page-choicedetail {
       width: 100%;
       margin-top: 35px;
       background: pink;
+
+    position: relative;
     }
     .show{
 
@@ -165,6 +174,8 @@ page-choicedetail {
       padding-right:0px;
       padding-bottom: 5px;
       padding-top:5px;
+
+    height: 62px !important;
       text-align: center;
     }
     .segactive{
@@ -402,6 +413,11 @@ page-choicedetail {
         columns: white;
         width:100%;
         overflow: hidden;
+        margin-top:0px !important;
+
+    height: 70%;
+    position: absolute;
+    overflow: scroll;
     }
     .fab .button-inner{
         font-size:30px;
