--- a/src/pages/info/info.scss
+++ b/src/pages/info/info.scss
@@ -362,7 +362,7 @@ page-info {
           }
           .datas
           {
-    height: 30px;
+    height: 38px !important;
     border-bottom: solid 1px #b0b0b0;
     line-height: 30px;
           }
