--- a/src/pages/infomodal/infomodal.scss
+++ b/src/pages/infomodal/infomodal.scss
@@ -23,6 +23,18 @@ page-infomodal {
     height: 45px;
 width: 80%;
     }
+    .b{
+    margin-top: 70px;
+    }
+
+    .left2{
+
+      float: left;
+      width: 100%;
+      height: 40px;
+      position: absolute;
+      left: 5%;
+  }
     .left{
 
       float: left;
