--- a/src/pages/choice/choice.scss
+++ b/src/pages/choice/choice.scss
@@ -15,6 +15,60 @@ page-choice {
       margin-left: 5px;
 
     }
+    .tab-content {
+      padding-left: 0px;
+      padding-right: 0px;
+      background: white;
+
+
+      max-height: 0;
+      overflow: hidden;
+      transition: all 0.5s ease-out;
+      position: fixed;
+      bottom: 40px;
+      left: 0;
+      width: 100%;
+      padding: 20px;
+      z-index: 1;
+      margin-bottom: -50px;
+    }
+    
+    /* Style the tab labels */
+    .tab {
+      display: inline-block;
+      margin: 0px;
+      position: fixed;
+      bottom: 0;
+      width: 100px;
+      height: 40px;
+      background-color: #eee;
+      border-radius: 3px 3px 0 0;
+      text-align: center;
+      cursor: pointer;
+      transition: all 0.5s ease-in-out;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    }
+    
+    /* Move the tab labels and content upwards when clicked */
+
+    .tab input[type=checkbox]:checked ~ label {
+      transform: translateY(-70%);
+    }
+    
+    .tab input[type=checkbox]:checked ~ .tab-content {
+      max-height: 120px;
+      overflow-y: scroll;
+
+      padding-left: 0px;
+      padding-right: 0px;
+      background: white;
+    }
+    
+    /* Show the tab content when the radio button is checked */
+    .tab input[type=checkbox]:checked ~ .tab-content {
+      display:block;
+      transform: translateY(-70%);
+    }
     .scroll-content{
         padding:0px !important;
         margin-top:0px !important;
