--- a/src/pages/choicedetail/choicedetail.scss
+++ b/src/pages/choicedetail/choicedetail.scss
@@ -18,11 +18,12 @@ page-choicedetail {
   }
   .messagessss{
     
+    border-top: solid 1px gray;
     overflow-y: scroll;
     width: 100%;
     height: 23%;
     position: absolute;
-    top: 70%;
+    top: 65%;
   }
   .btnbottom{
     width:50px !important;
@@ -37,14 +38,12 @@ page-choicedetail {
     overflow-y: hidden !important;
   }
   .memo{
-    
     width: 100%;
     text-align: center;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 900;
-
     position: absolute;
-    bottom: -7%;
+    bottom: 5%;
     color: red;
     padding: 10px;
     padding-bottom: 0px;
@@ -415,7 +414,7 @@ page-choicedetail {
         overflow: hidden;
         margin-top:0px !important;
 
-    height: 70%;
+    height: 65%;
     position: absolute;
     overflow: scroll;
     }
