--- a/src/pages/waiting/waiting.scss
+++ b/src/pages/waiting/waiting.scss
@@ -1,42 +1,5 @@
-page-wt {
+page-waiting {
 
-
-
-    .accordion-list{
-    }
-    .section{
-        background: white;
-        color:black;
-        margin-bottom:4px;
-    }
-    .section-active{
-        background: white;
-        color:black;
-        margin-bottom:4px;
-    }
-    .child{
-        color:white;
-    }
-    label label-md{
-        margin:0px !important;
-    }
-    .label-md{
-        margin:0px !important;
-    }
-    .child-item{
-        background-color: white;
-        color:black;
-        padding:10px;
-        p{
-            color:black;
-        }
-        span{
-            color:black;
-        }
-    }
-
-
-    
     .header {
         position: absolute;
         width: 100%;
@@ -46,7 +9,7 @@ page-wt {
         padding:0px !important;
         margin-top:0px !important;
     }
-    .header-parking { 
+    .header-parking {
         text-align: center;
         width: 100%;
         height: 100px;
@@ -58,17 +21,41 @@ page-wt {
         padding-left: 0px !important;
         margin-left: 30px;
     }
-    button{
-        color:black;
-    }
     .segactive{
         background: blue !important;
+    }
+    .select-text{
+      width:80px !important;
+    }
+    .button-inner{
+      color:black !important;
+    }
+    ion-select{
+
+    font-size: 10px !important;
     }
     .segment-button {
         color: red; // here, instead of "red" you can use sass variable if it was already defined
     }
+    .input-wrapper{
+      overflow: visible !important;
+    }
+    .selecting{
+      float: right;
+      width: 190px;
+      height: 34px;
+    }
+    .rowrow{
+      span{
+      text-decoration: line-through;
+      color:  red;
+      }
+    }
+    .select-md{
+      padding : 0px !important;
+    }
     .ion-label{
-        
+
     font-size: 20px;
     font-weight: 700 ;
     }
@@ -81,7 +68,6 @@ page-wt {
     }
     .box {
         height: 100%;
-
     }
 
     .box-1 {
@@ -224,6 +210,7 @@ page-wt {
         background-color: black;
         color: white;
         cursor: pointer;
+        padding: 18px;
         width: 100%;
         border: none;
         text-align: left;
@@ -234,7 +221,7 @@ page-wt {
         padding-bottom: 0px;
         padding-top: 0px;
     }
-    .toolbar-background{
+      .toolbar-background{
         background: #fdd734;
     }
     .toolbar{
@@ -247,8 +234,8 @@ page-wt {
 
     margin-top: 80px;
     width: 100%;
-    color: black;
-    background: black;
+    color: red;
+    background: red;
     }
     .accordion > div {
         width: 50%;
@@ -319,8 +306,152 @@ page-wt {
         right: 10%;
         bottom: 5%;
     }
-    .c{
-        height: 80% !important;
-        overflow: scroll !important;
+
+    .contents
+    {
+      background: white;
+      .room-current
+      {
+        margin-top: 5%;
+        padding: 3%;
+
+    border: solid 1px;
+    margin-left: 10px;
+    margin-right: 10px;
+        .title-div
+        {
+
+    height: 50px;
+          .square
+          {
+            color: rgb(254, 184, 45);
+          }
+          .text
+          {
+            color: black;
+            font-size: 20px;
+          }
+        }
+
+        .chart-div
+        {
+          color: black;
+          text-align: center;
+          .name-keys, .datas{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            span{
+              display: inline-block;
+              width: calc(100% / 7);
+            }
+            span:nth-child(n+1)
+            {
+              border-left: solid 1px white;
+            }
+          }
+          .name-keys
+          {
+
+            text-align: center;
+            font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+            background-color: rgb(255,240,200);
+            border-bottom: solid 1px black;
+          }
+          .datas
+          {
+    height: 30px;
+    border-bottom: solid 1px #b0b0b0;
+    line-height: 30px;
+          }
+        }
+      }
+      .vacancy-current
+      {    overflow-y: scroll;
+    width: 100%;
+        .title-div
+        {
+
+    padding: 5px;
+          .square
+          {
+            color: rgb(254, 184, 45);
+          }
+          .text
+          {
+            color: black;
+            font-size: 20px;
+          }
+        }
+
+
+
+        .chart-div
+        {
+          border: solid 1px white;
+          background: wheat;
+          overflow-y: scroll;
+          height: 80%;
+    background-color: white !important;
+          .flex-div:nth-child(n+2)
+          {
+            border-top: solid 1px white;
+          }
+          .flex-div > .chart-name
+          {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            background: #fdd734;
+            height: 40px;
+            width: 100%;
+            line-height: 40px;
+            span:nth-child(n+2)
+            {
+              border-left: solid 1px white;
+              flex: 1;
+            }
+            span:first-child
+            {
+              font-size: 20px;
+              text-align: center;
+              flex: 3;
+            }
+          }
+
+          .chart-datas
+          {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+
+    background-color: white !important;
+            span{
+              height: 50px;
+              line-height: 50px;
+              text-align: center;
+              display: inline-block;
+
+    border: none !important;
+    background-color: white !important;
+              width: calc(100% / 6);
+            }
+            span:nth-child(n+2)
+            {
+              border-left: solid 1px rgb(117,117,117);
+            }
+            span:nth-child(7n)
+            {
+              border-left: none
+            }
+            span:nth-child(n+7)
+            {
+              border-top: solid 1px rgb(117,117,117);
+            }
+          }
+        }
+      }
     }
 }
