--- a/src/pages/waiting/waiting.scss
+++ b/src/pages/waiting/waiting.scss
@@ -15,6 +15,12 @@ page-waiting {
         height: 100px;
         margin-top: 10px;
     }
+    .newspan{
+      margin-left: 20px;
+    }
+    .sspan{
+      margin-left: 20px;
+    }
     .looping{
         width: 100% !important;
         display: flex;
