--- a/src/pages/choicedetail/choicedetail.scss
+++ b/src/pages/choicedetail/choicedetail.scss
@@ -2,17 +2,21 @@ page-choicedetail {
   .messagediv{
 
     width: 90%;
-    height: 50px;
+    height: 39px;
     align-items: left;
     background-color: white;
     color: black;
     margin-left: 16px;
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 2px;
     border-radius: 10px;
     border: solid 1px;
     p{
       margin-bottom:3px !important;
+      font-size:11px !important;
+    }
+    span{
+      font-size:11px !important;
     }
 
   }
